Update to preview 6.
DotNetInstance/static handlers is not working.

--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/_Host.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/_Host.cshtml
@@ -29,7 +29,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="~/dist/SampleJsInterop.js" type="text/javascript" language="javascript"></script>
-    <script src="~/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <script src="_content/ChartJsBlazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
     <link href="css/toastr.min.css" rel="stylesheet" />
 </body>
 </html>
