--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Legend/JsHandlersComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Legend/JsHandlersComponent.razor
@@ -6,14 +6,14 @@
 
 <h2>Legend Item - Javascript click handler</h2>
 <div class="row">
-    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
+    <button class="btn btn-primary" @onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsBarChart ref="barChart"
+<ChartJsBarChart @ref="barChart"
                  Config="@barChartConfig"
                  Width="600"
                  Height="300" />
 
-<DataDisplayComponent OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300" />
+<DataDisplayComponent OnUpdatedDataStr="@OnDataStrChange" @bind-DataStr="@DataStr" Width="600" Height="300" />
 
 @functions {
 
