--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LineChartComponent.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LineChartComponent.razor
@@ -5,13 +5,13 @@
 
 <h2>Line Chart</h2>
 <div class="row">
-    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
+    <button class="btn btn-primary" @onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
+<ChartJsLineChart @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
 
-<DataDisplayComponent OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300"/>
+<DataDisplayComponent OnUpdatedDataStr="@OnDataStrChange" @bind-DataStr="@DataStr" Width="600" Height="300"/>
 
-@functions{
+@code{
 
     public LineChartConfig lineChartConfig { get; set; }
     ChartJsLineChart lineChartJs;
