Create usable typesafe layout for datasets using wrappers, todo: cleanup all the comments, maybe move namespace stuff, currently the Datasets-hashset accepts any IMixableDataset -> maybe add more interfaces or do the solution with empty interfaces for every type to restrict it more (see todo-list in timeAxis branch)

--- a/ChartJs.Blazor/Charts/ChartJsBarChart.razor
+++ b/ChartJs.Blazor/Charts/ChartJsBarChart.razor
@@ -1,6 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.BarChart
-@typeparam TData
-@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfig<TData>>
+@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfig>
 
 <div class="row">
     <div class="container">
