Implement and Fix responsiveness, remove unnecessary properties + more refactoring

--- a/ChartJs.Blazor/Charts/ChartJsMixedChart.razor
+++ b/ChartJs.Blazor/Charts/ChartJsMixedChart.razor
@@ -3,7 +3,7 @@
 @inherits ChartJs.Blazor.Charts.ChartBase<MixedChartConfig<TData>>
 
 <div class="row">
-    <div class="container">
+    <div class="chart-container">
         <canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
     </div>
 </div>
