--- a/ChartJs.Blazor/Charts/ChartJsRadarChart.razor
+++ b/ChartJs.Blazor/Charts/ChartJsRadarChart.razor
@@ -2,7 +2,7 @@
 @inherits ChartJs.Blazor.Charts.ChartBase<RadarChartConfig>
 
 <div class="row">
-    <div class="container">
+    <div class="chart-container">
         <canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
     </div>
 </div>
