--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -18,13 +18,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="fetchdataLinear">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Linear
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdataLogarithmic">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Logarithmic
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdataTimeExample">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data Time
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Time
             </NavLink>
         </li>
     </ul>
