Add hidden flag for datasets, generate xml-documentation for assembly

--- a/WebCore/Pages/FetchDataLinear.razor
+++ b/WebCore/Pages/FetchDataLinear.razor
@@ -108,6 +108,7 @@
             PointRadius = 2,
             PointBorderWidth = 1,
             SteppedLine = SteppedLine.False,
+            Hidden = true
         };
 
         WeatherForecast[] forecasts = await ForecastService.GetStaticForecastAsync(DateTime.Now, 5);
