--- a/WebCore/Pages/_Host.cshtml
+++ b/WebCore/Pages/_Host.cshtml
@@ -27,16 +27,21 @@
 
     <script src="_framework/blazor.server.js"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"
             integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo="
             crossorigin="anonymous">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
     @*<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js"></script>*@ <!--Contains moment.js for time axis-->
-
+    
     <!-- Include js-interop and css for responsiveness -->
-    <script src="~/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
-    <link rel="stylesheet" href="~/ChartJs.Blazor/ChartJsBlazor.css" />
+    @*
+        Even though it says here https://docs.microsoft.com/en-us/aspnet/core/razor-pages/ui-class?view=aspnetcore-3.0&tabs=visual-studio#consume-content-from-a-referenced-rcl
+        that the path should be all lowercase without dots (so "_content/chartjsblazor/"), this is currently not correct.
+        You have to actually use "_content/ChartJs.Blazor/" for it to work correctly. This might change in a later preview.
+    *@
+    <script src="_content/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <link rel="stylesheet" href="_content/ChartJs.Blazor/ChartJsBlazor.css" />
 </body>
 </html>
