Make cast operators for Moment explicit

--- a/WebCore/Pages/FetchDataTimeExample.razor
+++ b/WebCore/Pages/FetchDataTimeExample.razor
@@ -110,7 +110,7 @@
             SteppedLine = SteppedLine.False
         };
 
-        tempDataSet.AddRange(forecasts.Select(p => new TimeTupel<int>(p.Date, p.TemperatureC)));
+        tempDataSet.AddRange(forecasts.Select(p => new TimeTupel<int>(new Moment(p.Date), p.TemperatureC)));
         lineChartConfig.Data.Datasets.Add(tempDataSet);
     }
 
