--- a/WebCore/Pages/_Host.cshtml
+++ b/WebCore/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/"
+@page "/"
 @namespace WebCore.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,ChartJs.Blazor
@@ -27,7 +27,6 @@
 
     <script src="_framework/blazor.server.js"></script>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"
             integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo="
             crossorigin="anonymous">
