Removed dougnut title, updated pie chart sample to work with List<double>, fixed dataset according to documentation page.

--- a/WebCore/Pages/PieChartExample.razor
+++ b/WebCore/Pages/PieChartExample.razor
@@ -37,7 +37,7 @@ protected override void OnInit()
     var pieSet = new PieChartDataset
     {
         BackgroundColor = new[] { "#ff6384", "#55ee84", "#4463ff", "#efefef" },
-        Data = new List<int> { 4, 5, 6, 7 },                // this will be removed and shouldn't be possible
+        Data = new List<double> { 4, 5, 6, 7 },                // this will be removed and shouldn't be possible
         Label = "Light Red",
         BorderWidth = 0,
         HoverBackgroundColor = new[] { "#f06384" },
