Renamed DoughnutAnimation to PieAnimation.

--- a/WebCore/Pages/PieChartExample.razor
+++ b/WebCore/Pages/PieChartExample.razor
@@ -24,7 +24,7 @@ protected override void OnInit()
                 Text = "Sample chart from Blazor"
             },
             Responsive = true,
-            Animation = new DoughnutAnimation
+            Animation = new PieAnimation
             {
                 AnimateRotate = true,
                 AnimateScale = true
