Rename example pages (+ routes)

--- a/WebCore/Pages/LineLogarithmicExample.razor
+++ b/WebCore/Pages/LineLogarithmicExample.razor
@@ -1,4 +1,4 @@
-@page "/fetchdataLogarithmic"
+@page "/LineLogarithmicExample"
 @using WebCore.Data
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.Common
