--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -13,23 +13,28 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="LineLinearExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Linear
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdataLinear">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Linear
+            <NavLink class="nav-link" href="LineLogarithmicExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Logarithmic
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdataLogarithmic">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Logarithmic
+            <NavLink class="nav-link" href="LineTimeExample">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Line Time
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdataTimeExample">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Chart Time
+            <NavLink class="nav-link" href="PieExample">
+                <span class="oi oi-pie-chart" aria-hidden="true"></span> Pie
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="DoughnutExample">
+                <span class="oi oi-pie-chart" aria-hidden="true"></span> Doughnut
             </NavLink>
         </li>
     </ul>
