--- a/WebCore/Pages/LineTimeExample.razor
+++ b/WebCore/Pages/LineTimeExample.razor
@@ -1,6 +1,7 @@
-@page "/fetchdataLinear"
+@page "/LineTimeExample"
 @using WebCore.Data
 @using ChartJs.Blazor.Charts
+@using ChartJs.Blazor.ChartJS
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Properties
 @using ChartJs.Blazor.ChartJS.Common.Enums
@@ -8,22 +9,39 @@
 @using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.ChartJS.LineChart.Axes
 @using ChartJs.Blazor.ChartJS.LineChart.Axes.Ticks
-@using ChartJs.Blazor.Util.Color
 @inject WeatherForecastService ForecastService
+@inject IJSRuntime jsRuntime
 
-<h2>Line Linear Chart</h2>
+<h2>Line Time Chart</h2>
 <ChartJsLineChart @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
 
 @functions
 {
     LineChartConfig lineChartConfig;
     ChartJsLineChart lineChartJs;
+    const string de_ch = "de-ch";
+    private bool localeChangeWasAttempted = false;
+
+    private async Task TryChangeLocale()
+    {
+        if (localeChangeWasAttempted) return;
+        localeChangeWasAttempted = true;
+
+        var locales = await jsRuntime.GetAvailableLocales();
+        bool localeChanged = false;
+        if (locales != null && locales.Contains(de_ch))
+        {
+            localeChanged = await jsRuntime.ChangeLocale(de_ch);
+        }
+
+        if(!localeChanged) Console.WriteLine($"Locale was not changed to {de_ch}. Either it already is {de_ch} or this locale doesn't exist.");
+    }
 
     protected override async Task OnInitAsync()
     {
         lineChartConfig = new LineChartConfig
         {
-            CanvasId = "myFirstLineChart",
+            CanvasId = "timeChartExample",
             Options = new LineChartOptions
             {
                 Responsive = true,
@@ -48,33 +66,27 @@
                 Scales = new Scales
                 {
                     xAxes = new List<CartesianAxis>
-        {
-                        new LinearCartesianAxis
+                    {
+                        new TimeAxis
                         {
+                            Distribution = TimeDistribution.Linear,
+                            Ticks = new TimeTicks
+                            {
+                                Source = TickSource.Data
+                            },
+                            Time = new TimeOptions
+                            {
+                                Unit = TimeMeasurement.Hour,
+                                Round = TimeMeasurement.Hour,
+                                TooltipFormat = "DD.MM.YYYY HH:mm",
+                                DisplayFormats = TimeDisplayFormats.DE_CH
+                            },
                             ScaleLabel = new ScaleLabel
                             {
                                 LabelString = "Zeit"
-                            },
-                            GridLines = new GridLine
-                            {
-                                 Display = false
-                            },
-                            Ticks = new LinearCartesianTicks
-                            {
-                                SuggestedMin = -2
                             }
                         }
-                    },
-                    yAxes = new List<CartesianAxis>()
-        {
-                        new LinearCartesianAxis
-                        {
-                            ScaleLabel = new ScaleLabel
-                            {
-                                LabelString = "Temp"
-                            }
                         }
-                    }
                 },
                 Hover = new LineChartOptionsHover
                 {
@@ -84,41 +96,26 @@
             }
         };
 
+        var forecasts = await ForecastService.GetForecastAsync(DateTime.Now, 2);
 
-        var tempPerHourSet = new LineChartDataset<Point>()
+        var tempDataSet = new LineChartDataset<TimeTupel<int>>
         {
-            BackgroundColor = ColorUtil.ColorString(0, 255, 0, 1.0),
-            BorderColor = ColorUtil.ColorString(0, 0, 255, 1.0),
-            Label = "Temp (C) per Hour",
+            BackgroundColor = "#ff6384",
+            BorderColor = "#ff6384",
+            Label = "Temperatur in C°",
             Fill = false,
-            PointBackgroundColor = ColorUtil.RandomColorString(),
-            BorderWidth = 1,
+            BorderWidth = 2,
             PointRadius = 3,
             PointBorderWidth = 1,
-            SteppedLine = SteppedLine.False,
+            SteppedLine = SteppedLine.False
         };
 
-        var tempPerDaySet = new LineChartDataset<Point>()
-        {
-            BackgroundColor = "#63ff84",
-            BorderColor = "#63ff84",
-            Label = "Temp (F) per Day",
-            Fill = false,
-            BorderWidth = 1,
-            PointRadius = 2,
-            PointBorderWidth = 1,
-            SteppedLine = SteppedLine.False,
-            Hidden = true
-        };
+        tempDataSet.AddRange(forecasts.Select(p => new TimeTupel<int>(new Moment(p.Date), p.TemperatureC)));
+        lineChartConfig.Data.Datasets.Add(tempDataSet);
+    }
 
-        WeatherForecast[] forecasts = await ForecastService.GetStaticForecastAsync(DateTime.Now, 5);
-
-        var onlyDays = forecasts.GroupBy(f => f.Date.Day).Select(g => g.First());
-
-        tempPerHourSet.AddRange(onlyDays.Select(p => new Point(p.Date.Hour, p.TemperatureC)));
-        tempPerDaySet.AddRange(onlyDays.Select(p => new Point(p.Date.Day, p.TemperatureF)));
-
-        lineChartConfig.Data.Datasets.Add(tempPerHourSet);
-        lineChartConfig.Data.Datasets.Add(tempPerDaySet);
+    protected override async Task OnAfterRenderAsync()
+    {
+        await TryChangeLocale();
     }
 }
