--- a/WebCore/Pages/_Host.cshtml
+++ b/WebCore/Pages/_Host.cshtml
@@ -1,4 +1,4 @@
-@page "/"
+﻿@page "/"
 @namespace WebCore.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *,ChartJs.Blazor
